# JamPokerhand

./: JamHaskellPokerhand.cabal
src/: Pokerhand.hs
test/: Pokerhand.spec.hs
