name:                JamHaskellPokerhand
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/JamHaskellPokerhand#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pokerhand
  build-depends:       base 
  default-language:    Haskell2010

executable JamHaskellPokerhand-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base

test-suite JamHaskellPokerhand-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Pokerhand.spec.hs
  build-depends:       base
                     , JamHaskellPokerhand
                     , hspec
  default-language:    Haskell2010

